Updating to v2.3.1
